# tarot-decision-engine

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ui_phase1_architecture.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.js
frontend/src/: App.vue.js  main.ts
frontend/src/lib/: api.d.ts  api.js  api.ts  cards.d.ts  cards.js  cards.ts
frontend/src/router/: index.js  index.ts
frontend/src/stores/: gameSetup.d.ts  gameSetup.js  gameSetup.ts  ui.d.ts  ui.js  ui.ts
frontend/src/types/: api.d.ts  api.ts
frontend/src/views/: AnalysisView.vue  AnalysisView.vue.js  GameStateView.vue  GameStateView.vue.js  RecommendationView.vue  RecommendationView.vue.js  SetupView.vue  SetupView.vue.js
src/tarot_engine/api/: __init__.py  app.py  mappers.py  schemas.py  server.py
src/tarot_engine/application/: dto.py  services.py
src/tarot_engine/cli/: main.py
src/tarot_engine/decision/: evaluator.py  explainer.py  models.py  move_explainer.py  move_policies.py  policies.py
src/tarot_engine/domain/: actions.py  cards.py  deck.py  enums.py  game_state.py  hand.py  legal_actions.py  observations.py  projections.py  rules.py  scoring.py  transitions.py  trick.py
src/tarot_engine/inference/: __init__.py  belief_state.py  consistency.py  constraints.py  likelihood.py  posterior.py  sampler.py  updater.py
src/tarot_engine/simulation/: action_evaluator.py  game_runner.py  monte_carlo.py  policies.py  rollout.py  sampler.py  turn_policies.py  turn_runner.py
src/tarot_engine/utils/: parsing.py  random.py
tests/fixtures/: hands.py
tests/integration/: test_cli.py  test_simulation.py
tests/unit/: test_parsing.py
tests/unit/api/: test_api.py
tests/unit/application/: test_services.py
tests/unit/decision/: test_evaluator.py  test_models.py  test_move_explainer.py  test_move_policies.py  test_policies.py
(+57 files in other folders)
