[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tarot-decision-engine"
version = "0.1.0"
description = "Monte Carlo decision engine for 5-player French Tarot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
tarot-engine = "tarot_engine.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tarot_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
